--- a/vv.html
+++ b/vv.html
@@ -3,62 +3,112 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Watch Shared Screen Live</title>
+  <title>Watch Live Screen Share</title>
   <style>
-    body { margin:0; background:#000; color:white; font-family:sans-serif; height:100vh; display:flex; flex-direction:column; align-items:center; justify-content:center; }
-    video { width:100vw; height:100vh; object-fit:contain; background:black; }
-    input, button { padding:12px 24px; font-size:18px; margin:10px; border-radius:8px; border:none; }
-    button { background:#28a745; color:white; }
-    #status { font-size:20px; margin:20px; }
+    body {
+      margin: 0;
+      background: #000;
+      color: white;
+      font-family: sans-serif;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    video {
+      width: 100vw;
+      height: 100vh;
+      object-fit: contain;
+      background: black;
+      display: none;
+    }
+    input, button {
+      padding: 14px 28px;
+      font-size: 18px;
+      margin: 12px;
+      border-radius: 8px;
+      border: none;
+    }
+    button {
+      background: #28a745;
+      color: white;
+      cursor: pointer;
+    }
+    #status {
+      font-size: 20px;
+      text-align: center;
+      padding: 0 20px;
+      margin: 20px;
+    }
   </style>
   <script src="https://unpkg.com/peerjs@1.5.4/dist/peerjs.min.js"></script>
 </head>
 <body>
 
-  <video id="remoteVideo" autoplay playsinline></video>
-  <div id="status">Enter the sharing code to watch live</div>
+  <video id="remoteVideo" autoplay playsinline controls></video>
+  <div id="status">Enter the sharing code to watch</div>
 
-  <input type="text" id="roomInput" placeholder="Enter sharing code here" />
+  <input type="text" id="peerInput" placeholder="Paste sharing code here" />
   <button id="connectBtn">Connect & Watch</button>
 
   <script>
     const video = document.getElementById('remoteVideo');
     const status = document.getElementById('status');
-    const roomInput = document.getElementById('roomInput');
+    const peerInput = document.getElementById('peerInput');
     const connectBtn = document.getElementById('connectBtn');
 
     let peer;
     let call;
 
-    connectBtn.onclick = () => {
-      const targetId = roomInput.value.trim();
-      if (!targetId) return alert('Enter a code!');
+    connectBtn.onclick = async () => {
+      const targetId = peerInput.value.trim();
+      if (!targetId) {
+        status.textContent = 'Please enter a valid code';
+        return;
+      }
 
+      connectBtn.disabled = true;
       status.textContent = 'Connecting...';
 
-      peer = new Peer(); // viewer doesn't need fixed ID
+      try {
+        peer = new Peer();  // Viewer gets random temp ID
 
-      peer.on('open', () => {
-        // Connect and request stream
-        call = peer.call(targetId, null); // call without local stream
+        peer.on('open', () => {
+          status.textContent = 'Calling sharer...';
 
-        call.on('stream', (remoteStream) => {
-          video.srcObject = remoteStream;
-          status.textContent = '🔴 LIVE – Watching shared screen';
+          // For one-way screen share: answerer (viewer) sends NO stream or empty
+          call = peer.call(targetId, null);  // null = one-way receive only
+
+          call.on('stream', (remoteStream) => {
+            video.srcObject = remoteStream;
+            video.style.display = 'block';
+            status.textContent = '🔴 LIVE – Watching screen now';
+          });
+
+          call.on('close', () => {
+            status.textContent = 'Connection closed by sharer.';
+            video.style.display = 'none';
+            connectBtn.disabled = false;
+          });
+
+          call.on('error', (err) => {
+            status.textContent = 'Call failed: ' + err.message;
+            console.error(err);
+            connectBtn.disabled = false;
+          });
         });
 
-        call.on('close', () => {
-          status.textContent = 'Connection closed.';
+        peer.on('error', (err) => {
+          status.textContent = 'Connection error: ' + err.type;
+          console.error(err);
+          connectBtn.disabled = false;
         });
 
-        call.on('error', (err) => {
-          status.textContent = 'Error: ' + err.message;
-        });
-      });
-
-      peer.on('error', (err) => {
-        status.textContent = 'Peer error: ' + err.type;
-      });
+      } catch (err) {
+        status.textContent = 'Failed: ' + err.message;
+        connectBtn.disabled = false;
+      }
     };
   </script>
 </body>
