--- a/vv.html
+++ b/vv.html
@@ -21,7 +21,7 @@
       height: 100vh;
       object-fit: contain;
       background: black;
-      display: none; /* shown only when stream arrives */
+      display: none;
     }
     input, button {
       padding: 14px 28px;
@@ -36,7 +36,8 @@
       cursor: pointer;
     }
     button:disabled {
-      background: #555;
+      opacity: 0.5;
+      cursor: not-allowed;
     }
     #status {
       font-size: 20px;
@@ -50,9 +51,9 @@
 <body>
 
   <video id="remoteVideo" autoplay playsinline controls></video>
-  <div id="status">Enter the sharing code from the sharer page</div>
+  <div id="status">Enter the sharer's Peer ID to watch live</div>
 
-  <input type="text" id="peerInput" placeholder="Paste sharing code here" />
+  <input type="text" id="peerInput" placeholder="Paste Peer ID here (e.g. abcde-fghij-klmno)" />
   <button id="connectBtn">Connect & Watch</button>
 
   <script>
@@ -64,67 +65,73 @@
     let peer;
     let call;
 
-    // Create silent dummy stream (no mic/camera permission needed)
+    // Creates a silent dummy audio track (no permission popup)
     function createDummyStream() {
-      const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-      const oscillator = audioCtx.createOscillator();
-      oscillator.frequency.setValueAtTime(0, audioCtx.currentTime); // frequency 0 = silence
-      const destination = audioCtx.createMediaStreamDestination();
-      oscillator.connect(destination);
-      oscillator.start();
-      return destination.stream;
+      try {
+        const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+        const oscillator = audioCtx.createOscillator();
+        oscillator.frequency.value = 0; // silent
+        const destination = audioCtx.createMediaStreamDestination();
+        oscillator.connect(destination);
+        oscillator.start();
+        return destination.stream;
+      } catch (e) {
+        console.error('Dummy stream creation failed:', e);
+        // Fallback: empty stream
+        return new MediaStream();
+      }
     }
 
     connectBtn.onclick = async () => {
       const targetId = peerInput.value.trim();
       if (!targetId) {
-        status.textContent = 'Please enter a valid sharing code';
+        status.textContent = 'Enter a valid Peer ID';
         return;
       }
 
       connectBtn.disabled = true;
-      status.textContent = 'Initializing connection...';
+      status.textContent = 'Connecting to PeerJS... (may take 5–15 seconds)';
 
       try {
         peer = new Peer({
-          debug: 2  // enable more console logs for debugging
+          debug: 2  // More logs — open console (F12) to see what's happening
         });
 
         peer.on('open', (myId) => {
-          status.textContent = `Peer connected (your temp ID: ${myId}). Calling sharer...`;
+          status.textContent = `Your temp ID: ${myId} — Calling sharer now...`;
 
-          const dummy = createDummyStream();
+          const dummyStream = createDummyStream();
 
-          call = peer.call(targetId, dummy);
+          call = peer.call(targetId, dummyStream);
 
           call.on('stream', (remoteStream) => {
-            console.log('Received remote stream:', remoteStream);
+            console.log('Got remote screen stream!', remoteStream);
             video.srcObject = remoteStream;
             video.style.display = 'block';
-            status.textContent = '🔴 LIVE – Watching shared screen';
+            status.textContent = '🔴 LIVE — Screen is streaming';
           });
 
           call.on('close', () => {
-            status.textContent = 'Call ended (sharer stopped or disconnected)';
+            status.textContent = 'Connection closed (sharer stopped sharing?)';
             video.style.display = 'none';
             connectBtn.disabled = false;
           });
 
           call.on('error', (err) => {
-            status.textContent = 'Call error: ' + err.message;
+            status.textContent = 'Call error: ' + (err.message || err.type || 'unknown');
             console.error('Call error:', err);
             connectBtn.disabled = false;
           });
         });
 
         peer.on('error', (err) => {
-          status.textContent = 'PeerJS connection failed: ' + err.type + ' – ' + err.message;
+          status.textContent = 'PeerJS failed: ' + (err.message || err.type);
           console.error('Peer error:', err);
           connectBtn.disabled = false;
         });
 
       } catch (err) {
-        status.textContent = 'Setup failed: ' + err.message;
+        status.textContent = 'Error starting: ' + err.message;
         console.error(err);
         connectBtn.disabled = false;
       }
