--- a/items.html
+++ b/items.html
@@ -223,21 +223,23 @@
         { name: "special pizza", price: 360, image: "Pizza-Spot-Special.jpg" }
       ],
       "Mister Chef": [
-        { name: "VEG-Sandwiich", price: 60, image: "VEG-Sandwiich.jpg" },
-        { name: "Cheese-Sandwiich", price: 70, image: "Cheese-Sandwiich.jpg" },
-        { name: "Sweet Corn-Sandwiich", price: 70, image: "Sweet Corn-Sandwiich.jpg" },
-        { name: "MushRoom-Sandwiich", price: 75, image: "MushRoom-Sandwiich.jpg" },
-        { name: "Paneer-Sandwiich", price: 80, image: "Paneer-Sandwiich.jpg" },
-        { name: "Nuggets", price: 70, image: "Nuggets.jpg" },
-        { name: "french-Frics", price: 95, image: "french-Frics.jpg" },
-        { name: "masala-Frics", price: 95, image: "Masala-Fries.jpg" },
-        { name: "Classic-Burger", price: 70, image: "Classic-Burger.jpg" },
-        { name: "Aloo Tikki-burger", price: 80, image: "Aloo-Tikki-Burger.jpg" },
-        { name: "paneer-burger", price: 99, image: "Paneer-Burger.jpg" },
-        { name: "Chees-burger", price: 99, image: "Chees-burger.jpg" },
-        { name: "Double Decker-burger", price: 119, image: "Double Decker-burger.jpg" },
-        { name: "Margherita-Pizza", price: 155, image: "Margherita-Pizza.jpg" },
-        { name: "Veggie-burger", price: 169, image: "Veggie-burger.jpg" }
+       
+  { "name": "VEG-Sandwiich", "price": 74, "image": "VEG-Sandwiich.jpg" },
+  { "name": "Cheese-Sandwiich", "price": 84, "image": "Cheese-Sandwiich.jpg" },
+  { "name": "Sweet Corn-Sandwiich", "price": 84, "image": "Sweet Corn-Sandwiich.jpg" },
+  { "name": "MushRoom-Sandwiich", "price": 89, "image": "MushRoom-Sandwiich.jpg" },
+  { "name": "Paneer-Sandwiich", "price": 94, "image": "Paneer-Sandwiich.jpg" },
+  { "name": "Nuggets", "price": 84, "image": "Nuggets.jpg" },
+  { "name": "french-Frics", "price": 109, "image": "french-Frics.jpg" },
+  { "name": "masala-Frics", "price": 109, "image": "Masala-Fries.jpg" },
+  { "name": "Classic-Burger", "price": 84, "image": "Classic-Burger.jpg" },
+  { "name": "Aloo Tikki-burger", "price": 94, "image": "Aloo-Tikki-Burger.jpg" },
+  { "name": "paneer-burger", "price": 113, "image": "Paneer-Burger.jpg" },
+  { "name": "Chees-burger", "price": 113, "image": "Chees-burger.jpg" },
+  { "name": "Double Decker-burger", "price": 133, "image": "Double Decker-burger.jpg" },
+  { "name": "Margherita-Pizza", "price": 169, "image": "Margherita-Pizza.jpg" },
+  { "name": "Veggie-burger", "price": 183, "image": "Veggie-burger.jpg" }
+
       ],
       "Hasanamba Iyengar Bakery": [
         { name: "Rasmalai Cake", price: 750, image: "Rasmalai-Cake.jpg" },
