--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
       <div class="offer-title">Republic Day 2026 Special! 🇮🇳</div>
       <div>
         <span class="offer-flag">🇮🇳</span>
-        <span class="offer-text">FLAT 20% OFF upto ₹20</span>
+        <span class="offer-text">FLAT 20% OFF upto ₹20 USE CODE "REPUBLIC77"</span>
         <span class="offer-flag">🇮🇳</span>
       </div>
     </div>
